Inserting Favicon and images and starting  work on the header

--- a/index.html
+++ b/index.html
@@ -3,11 +3,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/style.css">
+    <link rel="icon" href="./Images/favicon.ico">
     <title>Simona's Web Page</title>
 </head>
 <body>
-    
+    <header>
+        <nav id="navbar">
+            <ul>
+              <li> <a class="nav_bar" href="#welcome-section">Nice to meet you </a> </li>
+              <li> <a class="nav_bar" href="#projects"> My projects </a> </li>
+              <li> <a class="nav_bar" href="#contact"> Contacts </a> </li>
+            </ul>
+          </nav>
 
-    <script src="./JS/app.js"></script>
+    </header>
+
+  <!--About Me-->
+
+  <div class="welcome-section" id="welcome-section">
+    <img class="my_photo" src="./Images/Background.png"/>
+    <img class="but1" src="./Images/but_left.png"/>
+    <img class="but2" src="./Images/but_right.png"/>
+   <div class = "hey"><h1> I'm Simona<br> WEB Developer</h1></div> 
+
+</div>    
+ <!--My Projects-->
+
+<div id="projects">
+
+
+</div>
+
+<!--Contacts-->
+
+<div id="contact">
+
+</div>
+
+
+
+
+
+
+<script src="./JS/app.js"></script>
 </body>
 </html>
