--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
               <li> <a class="nav_bar" href="#projects"> My projects </a> </li>
               <li> <a class="nav_bar" href="#contact"> Contacts </a> </li>
             </ul>
+            <hr size=3>
           </nav>
 
     </header>
