Chosen fonts and starting work with butterflies

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/style.css">
     <link rel="icon" href="./Images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montez&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <title>Simona's Web Page</title>
 </head>
 <body>
@@ -25,8 +26,12 @@
     <img class="my_photo" src="./Images/Background.png"/>
     <img class="but1" src="./Images/but_left.png"/>
     <img class="but2" src="./Images/but_right.png"/>
-   <div class = "hey"><h1> I'm Simona<br> WEB Developer</h1></div> 
+    <img class="but3" src="./Images/but_right.png"/>
+    <img class="but4" src="./Images/but_right.png"/>
+    <img class="but5" src="./Images/but_right.png"/>
 
+   <div class = "hey"><h1> I'm Simona</h1></div> 
+   <div class = "hey2"><h2>WEB Developer</h2></div> 
 </div>    
  <!--My Projects-->
 
