Have made several changes: reduced quantity of butterflies, starting to create media query. Happy that I figured out how to keep the text centered while dynamically resizing the window. Also made the header position fixed while scrolling down. Now I can go bake a cake.:)

--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
   <!--About Me-->
 
   <div class="welcome-section" id="welcome-section">
-    <img class="my_photo" src="./Images/Background.png"/>
-    <img class="but1" src="./Images/but_left.png"/>
-    <img class="but2" src="./Images/but_right.png"/>
-    <img class="but3" src="./Images/but_right.png"/>
-    <img class="but4" src="./Images/but_right.png"/>
-    <img class="but5" src="./Images/but_right.png"/>
+   
+   <img class="my_photo" src="./Images/Background.png"/>   
+    <img class="but1" id="but1" src="./Images/but_left.png"/>
+    <img class="but2" id="but2" src="./Images/but_left.png"/>
+    <img class="but3" id="but3" src="./Images/but_right.png"/>
+       
 
-   <div class = "hey"><h1> I'm Simona</h1></div> 
-   <div class = "hey2"><h2>WEB Developer</h2></div> 
+   <div class = "hey" id="hey">
+     <h1> I'm Simona</h1>
+   <h2>WEB Developer</h2>
 </div>    
+</div>
+
  <!--My Projects-->
 
 <div id="projects">
