starting work on ABOUT ME section

--- a/index.html
+++ b/index.html
@@ -4,36 +4,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/style.css">
     <link rel="icon" href="./Images/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montez&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <title>Simona's Web Page</title>
 </head>
 <body>
     <header>
-        <nav id="navbar">
+        <nav class="navbar" id="navbar">
             <ul>
-              <li> <a class="nav_bar" href="#welcome-section">Nice to meet you </a> </li>
-              <li> <a class="nav_bar" href="#projects"> My projects </a> </li>
-              <li> <a class="nav_bar" href="#contact"> Contacts </a> </li>
+              <li> <a class="list" href="#About_Me">Nice to meet you </a> </li>
+              <li> <a class="list" href="#projects"> My projects </a> </li>
+              <li> <a class="list" href="#contact"> Contacts </a> </li>
             </ul>
             <hr size=3>
           </nav>
 
     </header>
 
-  <!--About Me-->
+<!--Welcom-section-->
 
   <div class="welcome-section" id="welcome-section">
    
-   <img class="my_photo" src="./Images/Background.png"/>   
-    <img class="but1" id="but1" src="./Images/but_left.png"/>
-    <img class="but2" id="but2" src="./Images/but_left.png"/>
-    <img class="but3" id="but3" src="./Images/but_right.png"/>
+   <img class="my_photo" src="./Images/Background.png" alt="purple_dandelion_flowers"/>   
+    <img class="but1" id="but1" src="./Images/but_left.png" alt="butterfly_one"/>
+    <img class="but2" id="but2" src="./Images/but_left.png" alt="butterfly_two"/>
+    <img class="but3" id="but3" src="./Images/but_right.png" alt="butterfly_three"/>
        
    <div class = "hey" id="hey">
      <h1> I'm Simona</h1>
    <h2>WEB Developer</h2>
 </div>    
 </div>
+  <!--About Me-->
+
+  <section class="about_me" id="About_Me">
+<figure>
+<img class="picture" src="./Images/web.jpg" alt="me_with_balloons"/>
+<figcaption><q>It's the possibility of having a dream come true <br> that makes life interesting.</q></figcaption>
+<cite>-Paulo Coelho-</cite>  
+</figure>
+
+<article>
+<h3> About Me</h3>
+<p>
+  
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl est, vestibulum finibus rutrum pulvinar, tincidunt at ligula. Donec eleifend rutrum velit, eu elementum velit volutpat et. Aenean lacinia ante augue, ac molestie lectus sollicitudin vitae. Sed ultrices tristique nulla sed hendrerit. Mauris ac tempor mauris. Donec condimentum, ante condimentum scelerisque ullamcorper, libero nibh sodales nisi, id maximus turpis odio ut odio. Donec enim ligula, convallis eu congue sed, egestas nec felis. Praesent rhoncus felis ac libero ultrices egestas. Cras sollicitudin dignissim quam, et sagittis ante porta sit amet. Sed tempus elit ut feugiat mattis. Praesent ligula dolor, malesuada id est sed, ornare scelerisque diam.
+
+Vivamus sodales magna in eleifend suscipit. Nam non porttitor turpis, sed lacinia ligula. Morbi scelerisque elit ut est pellentesque, et efficitur sapien finibus. Praesent egestas, libero id maximus accumsan, ligula tellus mattis augue, viverra imperdiet sapien tortor non est. Curabitur eget eros ac neque commodo hendrerit. Suspendisse suscipit nunc lectus. Quisque posuere nisi ut efficitur fringilla.
+
+Mauris eu faucibus nunc. Nulla vitae tincidunt purus. Morbi lacinia auctor gravida. Sed nec turpis eget ligula sodales malesuada id lobortis velit. Quisque dictum in nisl ut elementum. Nulla vestibulum, nisl et hendrerit molestie, felis metus dapibus diam, sed auctor ante turpis non dui. Suspendisse ante orci, fringilla eget massa in, facilisis lobortis turpis. Curabitur ut interdum sapien. Sed urna velit, egestas a lacus a, ultrices vehicula velit. Proin consectetur odio in maximus bibendum. Phasellus rhoncus sollicitudin porta. Mauris ornare suscipit rutrum. Aliquam erat volutpat. Donec non nisi quis lorem molestie hendrerit. Fusce bibendum pulvinar suscipit. Vivamus sollicitudin sapien vitae ipsum malesuada aliquam.
+</p>
+
+</article>
+
+
+<img class="picture2" src="./Images/my_photo2.jpg" alt="me_with_lion"/>
+
+
+
+
+</section>
 
  <!--My Projects-->
 
