adding images and text for the ABOUT ME section

--- a/index.html
+++ b/index.html
@@ -35,30 +35,62 @@
 </div>    
 </div>
   <!--About Me-->
+<h3> About Me</h3>
 
-  <section class="about_me" id="About_Me">
+<section class="about_me" id="About_Me">
 <figure>
 <img class="picture" src="./Images/web.jpg" alt="me_with_balloons"/>
 <figcaption><q>It's the possibility of having a dream come true <br> that makes life interesting.</q></figcaption>
 <cite>-Paulo Coelho-</cite>  
 </figure>
 
+
 <article>
-<h3> About Me</h3>
-<p>
-  
+<div class="about-me">
+<img class="picture1" src="./Images/PC.png" alt="old computer"/><p class="computer">
+  Coding never crossed my mind however I was always curious about technology 
+  and how things work. I remember when my dad bought our first PC in 1998. 
+  It just had the MS-DOS operation system on it. I taught myself how to send 
+  and receive emails as I wanted to chat with my friends. Once I set my mind 
+  to solving a particular problem I am very motivated, persistent, resourceful 
+  and creative in finding solutions.</p>
+</div>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl est, vestibulum finibus rutrum pulvinar, tincidunt at ligula. Donec eleifend rutrum velit, eu elementum velit volutpat et. Aenean lacinia ante augue, ac molestie lectus sollicitudin vitae. Sed ultrices tristique nulla sed hendrerit. Mauris ac tempor mauris. Donec condimentum, ante condimentum scelerisque ullamcorper, libero nibh sodales nisi, id maximus turpis odio ut odio. Donec enim ligula, convallis eu congue sed, egestas nec felis. Praesent rhoncus felis ac libero ultrices egestas. Cras sollicitudin dignissim quam, et sagittis ante porta sit amet. Sed tempus elit ut feugiat mattis. Praesent ligula dolor, malesuada id est sed, ornare scelerisque diam.
+<div class="about-me">
+  <img class="picture2" src="./Images/degree.png" alt="univercity hat"/><p class="education">
+    I have NCFE CACHE Level2 Certificate in Understanding working in the
+     Health Sector, a Bachelor Degree in “Business administration and 
+     management” and few other certificates in coaching, time planning and 
+     leadership.</p>
+  </div>
 
-Vivamus sodales magna in eleifend suscipit. Nam non porttitor turpis, sed lacinia ligula. Morbi scelerisque elit ut est pellentesque, et efficitur sapien finibus. Praesent egestas, libero id maximus accumsan, ligula tellus mattis augue, viverra imperdiet sapien tortor non est. Curabitur eget eros ac neque commodo hendrerit. Suspendisse suscipit nunc lectus. Quisque posuere nisi ut efficitur fringilla.
-
-Mauris eu faucibus nunc. Nulla vitae tincidunt purus. Morbi lacinia auctor gravida. Sed nec turpis eget ligula sodales malesuada id lobortis velit. Quisque dictum in nisl ut elementum. Nulla vestibulum, nisl et hendrerit molestie, felis metus dapibus diam, sed auctor ante turpis non dui. Suspendisse ante orci, fringilla eget massa in, facilisis lobortis turpis. Curabitur ut interdum sapien. Sed urna velit, egestas a lacus a, ultrices vehicula velit. Proin consectetur odio in maximus bibendum. Phasellus rhoncus sollicitudin porta. Mauris ornare suscipit rutrum. Aliquam erat volutpat. Donec non nisi quis lorem molestie hendrerit. Fusce bibendum pulvinar suscipit. Vivamus sollicitudin sapien vitae ipsum malesuada aliquam.
-</p>
+  <div class="about-me">
+    <img class="picture3" src="./Images/cosmetic.png" alt="cosmetics"/><p class="cosmetics">
+      I have been self-employed for the last 10 years working in cosmetic
+       sales. I prepared and delivered presentations, created motivational 
+       programs for my team, and ran structured training sessions.</p>
+    </div>
+    <div class="about-me">
+      <img class="picture4" src="./Images/software.png" alt="software engineer"/><p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl 
+        est, vestibulum finibus rutrum pulvinar, tincidunt at ligula. Donec 
+        eleifend rutrum velit, eu elementum velit volutpat et. Aenean lacinia 
+        ante augue, ac molestie lectus sollicitudin vitae. Sed ultrices 
+        tristique nulla sed hendrerit. Mauris ac tempor mauris. 
+        Donec condimentum, ante condimentum scelerisque ullamcorper, 
+        libero nibh sodales nisi, id maximus turpis odio ut odio. Donec 
+        enim ligula, convallis eu congue sed, egestas nec felis. 
+        Praesent rhoncus felis ac libero ultrices egestas. 
+        Cras sollicitudin dignissim quam, et sagittis ante porta sit amet. 
+        Sed tempus elit ut feugiat mattis. Praesent ligula dolor, malesuada 
+        id est sed, ornare scelerisque diam. Vivamus sodales magna in eleifend 
+        suscipit. Nam non porttitor turpis, sed lacinia ligula. </p>
+      </div>
 
 </article>
 
 
-<img class="picture2" src="./Images/my_photo2.jpg" alt="me_with_lion"/>
+<img class="picture5" src="./Images/my_photo2.jpg" alt="me_with_lion"/>
 
 
 
