I decide to change ABOUT ME section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!--About Me-->
 <h3> About Me</h3>
 
-<section class="about_me" id="About_Me">
+<section class="Me" id="About_Me">
 <figure>
 <img class="picture" src="./Images/web.jpg" alt="me_with_balloons"/>
 <figcaption><q>It's the possibility of having a dream come true <br> that makes life interesting.</q></figcaption>
@@ -87,10 +87,22 @@
         suscipit. Nam non porttitor turpis, sed lacinia ligula. </p>
       </div>
 
+      <div class="about-me">
+        <img class="picture5" src="./Images/HR.png" alt="software engineer"/><p>
+          I found out about “Founders and Coders” from a housemate who’s the 
+          head of HR in a Health-Tech NGO. She mainly recruits software 
+          developers and has hired a few graduates from “founders and coders”.
+           She told me about your bootcamps and your different approach to 
+           teaching. When I researched FAC I found an incredible community of 
+           inspirational people, hungry for knowledge to change their lives 
+           and potentially change the world! </p>
+        </div>
+
+
 </article>
 
 
-<img class="picture5" src="./Images/my_photo2.jpg" alt="me_with_lion"/>
+<img class="picture10" src="./Images/my_photo2.jpg" alt="me_with_lion"/>
 
 
 
