navbar changes color on scrolling

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Simona's Web Page</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav class="navbar" id="navbar">
             <ul>
               <li> <a class="list" href="#Main">Nice to meet you </a> </li>
               <li> <a class="list" href="#projects"> My projects </a> </li>
               <li> <a class="list" href="#contact"> Contacts </a> </li>
             </ul>
-            <hr class="HRnav" size=3>
+            <hr class="HRnav" id="HRnav" size=3>
           </nav>
 
     </header>
