changing layout of ABOUT ME section again

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="welcome-section" id="welcome-section">
    
-   <img class="my_photo" src="./Images/Background.png" alt="purple_dandelion_flowers"/>   
+   <img class="my_photo" src="./Images/background2.jpg" alt="purple_dandelion_flowers"/>   
     <img class="but1" id="but1" src="./Images/but_left.png" alt="butterfly_one"/>
     <img class="but2" id="but2" src="./Images/but_left.png" alt="butterfly_two"/>
     <img class="but3" id="but3" src="./Images/but_right.png" alt="butterfly_three"/>
@@ -37,7 +37,7 @@
   <!--About Me-->
 
 <section class="main_section" id="Main">
-
+<div class="main">
 <div class="picture"></div>
 
 <article class="About_me">
@@ -107,6 +107,19 @@
       unique ways. </p>
 
 </article>
+</div>
+<div class="random"> 
+  <section class="icon"><img class="icon_img" src="/Images/cake.png" alt=""/></section> 
+  <section class="icon" ><img  class="icon_img" src="/Images/skate.png" alt=""/> </section>
+  <section class="icon" ><img class="icon_img" src="/Images/cow.png" alt=""/> </section>
+  <section class="icon"><img class="icon_img" src="/Images/war.png" alt=""/> </section>
+  <section class="icon"><img class="icon_img"  src="/Images/choir.png" alt=""/> </section>
+  <section class="icon"><img class="icon_img" src="/Images/movie.png" alt=""/> </section>
+
+
+</div>
+
+
 <div class="quote">
 <figcaption><q>It's the possibility of having a dream come true <br> that makes life interesting.</q></figcaption>
 <cite>-Paulo Coelho-</cite>  
@@ -130,28 +143,39 @@
      aliquam sapien.
 </p>
 </article>
+
 <div class="picture2">  </div>
 
-
-
 </section>
+
+
+
 <img class="picture5" src="./Images/my_photo2.jpg" alt="me_with_lion"/> 
 
  <!--My Projects-->
 
-<div id="projects">
+ <section class="projects" id="projects">
 
 
-</div>
+
+
+
+
+  
+</section>
+
+
 
 <!--Contacts-->
-
-<div id="contact">
-
-</div>
+<section class="contact" id="contact">
 
 
 
+
+
+
+  
+</section>
 
 
 
