Working on Image Carousel and adding the footer

--- a/index.html
+++ b/index.html
@@ -178,38 +178,38 @@ to create something mind blowing in the future.
     <div class="slider-wrapper">
       <div class="slide active"> <!-- shows witch slide is active. after refresh from which slide we start doing our slide show -->
         <img class="picture-carousel random" src="./images/me.jpg" alt="picture of me">
-        <div class="facts">Random Facts About Me </div>
+       <!-- <div class="facts">Random Facts About Me </div>-->
       </div>
       <div class="slide">
         <img class="picture-carousel" src="./images/cake.jpg" alt="picture of cake">
-        <p class="text-carousel"> I like baking cakes more than eating them. </p>
+       <!-- <p class="text-carousel"> I like baking cakes more than eating them. </p>-->
       </div>
       <div class="slide">
     <img class="picture-carousel" src="./images/skate.jpg" alt="women skate">
-    <p class="text-carousel"> I used to ice skate across a frozen lake to go to school in the winter </p>
+    <!--<p class="text-carousel"> I used to ice skate across a frozen lake to go to school in the winter </p> -->
   </div>
   <div class="slide">
     <img class="picture-carousel" src="./images/vilage.jpg" alt="picture of village">
-    <p class="text-carousel"> I grew up in a small village with no running hot water and only 
-      an outdoor W.C. </p>
+    <!--<p class="text-carousel"> I grew up in a small village with no running hot water and only 
+      an outdoor W.C. </p>-->
   </div>
   <div class="slide">
     <img class="picture-carousel" src="./images/cow.jpg" alt="picture of the cow">
-    <p class="text-carousel"> I know how to milk a cow</p>
+  <!--  <p class="text-carousel"> I know how to milk a cow</p>-->
   </div>
   <div class="slide">
-    <img class="picture-carousel" src="./images/army.png" alt="military">
-    <p class="text-carousel"> After I finished school I was accepted by a military school,
-       but decided to go elsewhere</p>
+    <img class="picture-carousel" src="./images/army.jpg" alt="military">
+  <!--  <p class="text-carousel"> After I finished school I was accepted by a military school,
+       but decided to go elsewhere</p>-->
   </div>
   <div class="slide">
     <img class="picture-carousel" src="./images/choir.jpg" alt="children choir">
-    <p class="text-carousel"> At school I was removed from the choir after the teacher 
-      found out how bad my singing voice was</p>
+    <!--<p class="text-carousel"> At school I was removed from the choir after the teacher 
+      found out how bad my singing voice was</p>-->
   </div>
   <div class="slide">
-    <img class="picture-carousel" src="./images/movie.jpg" alt="movie poster">
-    <p class="text-carousel"> My favourite movie is <a href="https://www.imdb.com/title/tt1187043/" target="_blank"> “3 idiots”</a> </p>
+  <img class="picture-carousel" src="./images/movie.jpg" alt="movie poster">
+    <!--  <p class="text-carousel"> My favourite movie is <a href="https://www.imdb.com/title/tt1187043/" target="_blank"> “3 idiots”</a> </p> -->
   </div>
   
   <div id="btn-prev"></div>
@@ -269,7 +269,14 @@ to create something mind blowing in the future.
 <!--Contacts-->
 <section class="contact" id="contact">
 
+<footer>
+  <h6>You can be friends with me:</h6>
+  <a href="https://www.linkedin.com/in/simona-joksaite-aa128466/" target="blank"><span class="iconify" data-icon="ant-design:linkedin-outlined" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
+  <a href="https://www.instagram.com/simona_joksaite/" target="blank"><span class="iconify" data-icon="fa-brands:instagram" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
+  <a href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="2rem" data-height="2rem"></span></a>
 
+  <p class="copyright">&copy; Simona 2020 London</p>
+</footer>
 
 
 
