working on improving the design

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div class="welcome-section" id="welcome-section">
    
-   <img class="my_photo" src="./Images/background2.jpg" alt="purple_dandelion_flowers"/>   
+   <img class="my_photo" src="./Images/background.jpg" alt="purple_dandelion_flowers"/>   
     <img class="but1" id="but1" src="./Images/but_left.png" alt="butterfly_one"/>
     <img class="but2" id="but2" src="./Images/but_left.png" alt="butterfly_two"/>
     <img class="but3" id="but3" src="./Images/but_right.png" alt="butterfly_three"/>
@@ -114,12 +114,14 @@
   </article>
 </div>
   <div>
-    <img class="photo1" src="./Images/photo22222.jpg"/>
+    <img class="photo1" src="./Images/photo1.jpg" alt="me near the castle"/>
   </div>
  </div>
 
 <div class="why">
-<div class="picture"></div>
+<div class="picture">
+  <img class="picture-balloon" src="./Images/photo2.jpg" alt="me with balloons"/>
+</div>
 
 <article class="My_Why">
   <h3> My Why</h3>
@@ -173,44 +175,33 @@ to create something mind blowing in the future.
 
  <section class="projects" id="projects">
 <!-- image carousel-->
-  <h3>My image carousel</h3>
+  <h3>My Projects</h3>
   <div class="flex-wrapper">
     <div class="slider-wrapper">
       <div class="slide active"> <!-- shows witch slide is active. after refresh from which slide we start doing our slide show -->
-        <img class="picture-carousel random" src="./images/me.jpg" alt="picture of me">
-       <!-- <div class="facts">Random Facts About Me </div>-->
-      </div>
+        <img class="picture-carousel" src="./images/me.jpg" alt="picture of me">
+          </div>
       <div class="slide">
         <img class="picture-carousel" src="./images/cake.jpg" alt="picture of cake">
-       <!-- <p class="text-carousel"> I like baking cakes more than eating them. </p>-->
-      </div>
+            </div>
       <div class="slide">
     <img class="picture-carousel" src="./images/skate.jpg" alt="women skate">
-    <!--<p class="text-carousel"> I used to ice skate across a frozen lake to go to school in the winter </p> -->
-  </div>
+     </div>
   <div class="slide">
     <img class="picture-carousel" src="./images/vilage.jpg" alt="picture of village">
-    <!--<p class="text-carousel"> I grew up in a small village with no running hot water and only 
-      an outdoor W.C. </p>-->
-  </div>
+      </div>
   <div class="slide">
     <img class="picture-carousel" src="./images/cow.jpg" alt="picture of the cow">
-  <!--  <p class="text-carousel"> I know how to milk a cow</p>-->
-  </div>
+    </div>
   <div class="slide">
     <img class="picture-carousel" src="./images/army.jpg" alt="military">
-  <!--  <p class="text-carousel"> After I finished school I was accepted by a military school,
-       but decided to go elsewhere</p>-->
-  </div>
+    </div>
   <div class="slide">
     <img class="picture-carousel" src="./images/choir.jpg" alt="children choir">
-    <!--<p class="text-carousel"> At school I was removed from the choir after the teacher 
-      found out how bad my singing voice was</p>-->
-  </div>
+      </div>
   <div class="slide">
   <img class="picture-carousel" src="./images/movie.jpg" alt="movie poster">
-    <!--  <p class="text-carousel"> My favourite movie is <a href="https://www.imdb.com/title/tt1187043/" target="_blank"> “3 idiots”</a> </p> -->
-  </div>
+     </div>
   
   <div id="btn-prev"></div>
   <div id="btn-next"></div>
@@ -234,15 +225,15 @@ to create something mind blowing in the future.
 <!--other projects-->
  <section class="other-projects">
 <figure>
-<a href= "https://github.com/missim2020/Women-In-Tech" target="blank"><img class="picture-projects" src="./Images/women_in_tech.png" alt="" ><figcaption>"CodeFirstGirls" project</figcaption></a>
+<a class="text-project" href= "https://github.com/missim2020/Women-In-Tech" target="blank"><img class="picture-projects" src="./Images/women_in_tech.png" alt="women in tech" ><figcaption >"CodeFirstGirls" project</figcaption></a>
 </figure>
 
 <figure>
-  <a href= "https://github.com/missim2020/Dice-game" target="blank"><img class="picture-projects" src="./Images/dice_game.png" alt="" > <figcaption>"Udemy course" project</figcaption></a>
+  <a  class="text-project" href= "https://github.com/missim2020/Dice-game" target="blank"><img class="picture-projects" src="./Images/dice_game.png" alt="dice game" > <figcaption>"Udemy course" project</figcaption></a>
 </figure>
 
 <figure>
-    <a href= "https://codepen.io/Missim2020/pen/vYOPOWM" target="blank"><img class="picture-projects" src="./Images/technical_documentation.jpg" alt="" ><figcaption>Project for "FreeCodeCamp" certificate</figcaption></a>
+    <a  class="text-project" href= "https://codepen.io/Missim2020/pen/vYOPOWM" target="blank"><img class="picture-projects" src="./Images/technical_documentation.jpg" alt="technical documentation" ><figcaption>Project for "FreeCodeCamp" certificate</figcaption></a>
     </figure>
   </section>
   
@@ -250,15 +241,15 @@ to create something mind blowing in the future.
   <section class="links">
    
     <figure>
-    <a href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>Github</figcaption></a>
+    <a class="project-links"href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>Github</figcaption></a>
     </figure>
     
     <figure>
-    <a href="https://www.freecodecamp.org/fccbb0169f7-7a3d-4ad5-b509-226de61e68cf" target="blank"><span class="iconify" data-icon="simple-icons:freecodecamp" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>FreeCodeCamp</figcaption></a>
+    <a class="project-links" href="https://www.freecodecamp.org/fccbb0169f7-7a3d-4ad5-b509-226de61e68cf" target="blank"><span class="iconify" data-icon="simple-icons:freecodecamp" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>FreeCodeCamp</figcaption></a>
   </figure>
 
   <figure>
-    <a href="https://www.codewars.com/users/missim2020" target="blank"><span class="iconify" data-icon="simple-icons:codewars" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>Codewars</figcaption></a>
+    <a class="project-links" href="https://www.codewars.com/users/missim2020" target="blank"><span class="iconify" data-icon="simple-icons:codewars" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>Codewars</figcaption></a>
   </figure>
   
   </section>
