Making the MY WHY section more responsive to screen resizing

--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
   <img class="picture-balloon" src="./Images/photo2.jpg" alt="me with balloons"/>
 </div>
 
+<div class="Why-text"> 
+
 <article class="My_Why">
-  <h3> My Why</h3>
+<h3> My Why</h3>
   <p class="text">
 I am always interested in learning new skills and am energised by the prospect 
 of diving into a new and exciting career. I think “Founders and Coders” is a fantastic 
@@ -144,8 +146,7 @@ experience:<br>
 -By explaining things to others I memorise them better <br>
 
 -After each meetup I felt very energised to not only complete all the 
-prerequisite tasks, but to explore above and beyond the subject. I understood h
-ow powerful this approach was and how much I can learn from this community by working 
+prerequisite tasks, but to explore above and beyond the subject. I understood how powerful this approach was and how much I can learn from this community by working 
 collaboratively.<br>
 
   </p>
@@ -158,16 +159,35 @@ to create something mind blowing in the future.
 
   </p>
   <hr class="dots">
+  
+  <div id="quote1">
+    <div class="corner "id="left_top"></div>
+    <div class="corner" id="left_bottom"></div>
+    <div class="corner" id="right_top"></div>
+    <div class="corner" id="right_bottom"></div>
+    <cite>Paulo Coelho</cite>
+    <blockquote>
+      <p class="quote"><i>&ldquo;It's the possibility of having a dream come true <br> that makes life interesting.&rdquo; </i></p>
+    </blockquote>
+  
+  </div>
+
   </article>
 
-  <img class="but4" id="but1" src="./Images/but_right.png" alt="butterfly_one"/>
-
 </div>
+</div>
+<!-- quote-->
 
+<div id="quote2">
+  <div class="corner "id="left_top"></div>
+  <div class="corner" id="left_bottom"></div>
+  <div class="corner" id="right_top"></div>
+  <div class="corner" id="right_bottom"></div>
+  <cite>Paulo Coelho</cite>
+  <blockquote>
+    <p class="quote"><i>&ldquo;It's the possibility of having a dream come true <br> that makes life interesting.&rdquo; </i></p>
+  </blockquote>
 
-<div class="quote">
-<figcaption><q>It's the possibility of having a dream come true <br> that makes life interesting.</q></figcaption>
-<cite>-Paulo Coelho-</cite>  
 </div>
 </section>
 
