working on media queries

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <!--Welcom-section-->
 
   <div class="welcome-section" id="welcome-section">
-   
+  <img class="mobile-photo" src="./Images/main-mobile.jpg" alt="purple_dandelion_flowers"/>
    <img class="my_photo" src="./Images/background.jpg" alt="purple_dandelion_flowers"/>   
+
     <img class="but1" id="but1" src="./Images/but_left.png" alt="butterfly_one"/>
     <img class="but2" id="but2" src="./Images/but_left.png" alt="butterfly_two"/>
     <img class="but3" id="but3" src="./Images/but_right.png" alt="butterfly_three"/>
@@ -260,16 +261,16 @@ to create something mind blowing in the future.
   <h5>More...</h5>
   <section class="links">
    
-    <figure>
-    <a class="project-links"href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>Github</figcaption></a>
+    <figure class="more">
+    <a class="project-links"href="https://github.com/missim2020" target="blank"><span class="iconify" data-icon="ant-design:github-filled" data-inline="false" data-width="1.8rem" data-height="1.8rem"></span><figcaption>Github</figcaption></a>
     </figure>
     
-    <figure>
-    <a class="project-links" href="https://www.freecodecamp.org/fccbb0169f7-7a3d-4ad5-b509-226de61e68cf" target="blank"><span class="iconify" data-icon="simple-icons:freecodecamp" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>FreeCodeCamp</figcaption></a>
+    <figure class="more">
+    <a class="project-links" href="https://www.freecodecamp.org/fccbb0169f7-7a3d-4ad5-b509-226de61e68cf" target="blank"><span class="iconify" data-icon="simple-icons:freecodecamp" data-inline="false" data-width="1.8rem" data-height="1.8rem"></span><figcaption>FreeCodeCamp</figcaption></a>
   </figure>
 
-  <figure>
-    <a class="project-links" href="https://www.codewars.com/users/missim2020" target="blank"><span class="iconify" data-icon="simple-icons:codewars" data-inline="false" data-width="2rem" data-height="2rem"></span><figcaption>Codewars</figcaption></a>
+  <figure class="more">
+    <a class="project-links" href="https://www.codewars.com/users/missim2020" target="blank"><span class="iconify" data-icon="simple-icons:codewars" data-inline="false" data-width="1.8rem" data-height="1.8rem"></span><figcaption>Codewars</figcaption></a>
   </figure>
   
   </section>
