media query for mobile phones

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 
 <section class="main_section" id="Main">
 <div class="About-me">
-  
+<div class="title-mobile"><a class="a-mobile" href="/about_me/about.html" target="blank"><h3 class="title-Aboutme-mobile"> About Me</h3></a></div>
 <div class="text-about-me">
-<div class="title"><h3> About Me</h3></div>
+<div class="title"><h3 class="title-Aboutme"> About Me</h3></div>
+
 <article class="article">
     
     <p class="text">	Coding never crossed my mind however I was always curious about 
@@ -120,14 +121,16 @@
  </div>
 
 <div class="why">
+
 <div class="picture">
   <img class="picture-balloon" src="./Images/photo2.jpg" alt="me with balloons"/>
 </div>
 
 <div class="Why-text"> 
+<div class="title-why-mobile"><a class="a-mobile" href="/My_Why/why.html" target="blank"><h3 class="title-MyWhy-mobile"> My Why</h3></a></div>
 
-<article class="My_Why">
-<h3> My Why</h3>
+<article class="article_My_Why">
+<h3 class="title-MyWhy"> My Why</h3>
   <p class="text">
 I am always interested in learning new skills and am energised by the prospect 
 of diving into a new and exciting career. I think “Founders and Coders” is a fantastic 
@@ -193,10 +196,12 @@ to create something mind blowing in the future.
 </section>
 
  <!--My Projects-->
-
- <section class="projects" id="projects">
+<div class="title_my_projects"><h3 >My Projects</h3></div>
+ 
+<section class="projects" id="projects">
 <!-- image carousel-->
-  <h3>My Projects</h3>
+  
+  
   <div class="flex-wrapper">
     <div class="slider-wrapper">
       <div class="slide active"> <!-- shows witch slide is active. after refresh from which slide we start doing our slide show -->
