will try to make my page live on Github and see how it looks on various devices

--- a/about_me/about.html
+++ b/about_me/about.html
@@ -14,7 +14,9 @@
 <body>
 
   
+  
         <div class="about_me">
+          <div class="back"><a href="/index.html">&#8592 Go Back</a></div>
         <div class="title"><h3 class="title-Aboutme"> About Me</h3></div>
   
             <img class="photo3" src="/Images/hill.jpg" alt="me"/>
