--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <section class="main_section" id="Main">
 <div class="About-me">
-<div class="title-mobile"><a class="a-mobile" href="/about_me/about.html" target="blank"><h3 class="title-Aboutme-mobile"> About Me</h3></a></div>
+<div class="title-mobile"><a class="a-mobile" href="/about_me/about.html" target="blank"><h3 class="title-Aboutme-mobile"> About Me&#8594;</h3></a></div>
 <div class="text-about-me">
 <div class="title"><h3 class="title-Aboutme"> About Me</h3></div>
 
@@ -127,7 +127,7 @@
 </div>
 
 <div class="Why-text"> 
-<div class="title-why-mobile"><a class="a-mobile" href="/My_Why/why.html" target="blank"><h3 class="title-MyWhy-mobile"> My Why</h3></a></div>
+<div class="title-why-mobile"><a class="a-mobile" href="/My_Why/why.html" target="blank"><h3 class="title-MyWhy-mobile"> My Why&#8594;</h3></a></div>
 
 <article class="article_My_Why">
 <h3 class="title-MyWhy"> My Why</h3>
