trying to figure out why Image carousel is not working

--- a/index.html
+++ b/index.html
@@ -207,28 +207,28 @@ to create something mind blowing in the future.
     <div class="slider-wrapper">
 
       <div class="slide active"> <!-- shows witch slide is active. after refresh from which slide we start doing our slide show -->
-        <img class="picture-carousel" src="/Images/me.jpg" alt="picture of me">
+        <img class="picture-carousel" src="Images/me.jpg" alt="picture of me">
           </div>
       <div class="slide">
-        <img class="picture-carousel" src="/images/cake.jpg" alt="picture of cake">
+        <img class="picture-carousel" src="Images/cake.jpg" alt="picture of cake">
             </div>
       <div class="slide">
-    <img class="picture-carousel" src="/images/skate.jpg" alt="women skate">
+    <img class="picture-carousel" src="Images/skate.jpg" alt="women skate">
      </div>
   <div class="slide">
-    <img class="picture-carousel" src="/images/vilage.jpg" alt="picture of village">
+    <img class="picture-carousel" src="Images/vilage.jpg" alt="picture of village">
       </div>
   <div class="slide">
-    <img class="picture-carousel" src="/images/cow.jpg" alt="picture of the cow">
+    <img class="picture-carousel" src="Images/cow.jpg" alt="picture of the cow">
     </div>
   <div class="slide">
-    <img class="picture-carousel" src="/images/army.jpg" alt="military">
+    <img class="picture-carousel" src="Images/army.jpg" alt="military">
     </div>
   <div class="slide">
-    <img class="picture-carousel" src="/images/choir.jpg" alt="children choir">
+    <img class="picture-carousel" src="Images/choir.jpg" alt="children choir">
       </div>
   <div class="slide">
-  <img class="picture-carousel" src="/images/movie.jpg" alt="movie poster">
+  <img class="picture-carousel" src="Images/movie.jpg" alt="movie poster">
      </div>
   
   <div id="btn-prev"></div>
